changed the whole server